--- a/index.html
+++ b/index.html
@@ -13,58 +13,66 @@
     <title>SalarFM</title>
 </head>
 <body>
+<!-- jumbotron ini -->
+<div class="p-5 jumbotron jumbotron-custom">
     <!-- Navbar Inicia -->
-    <nav class="navbar navbar-expand-sm navbar-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="img/SalarFMt_4 copia.png" alt="icono" style="width: 100px; height: auto;">
-            <span><img src="img/SalarFMt_7.png" alt="icono" style="width: 280px; height: auto;"></span>
-            </a>
+    <nav class="navbar navbar-expand-xl navbar-dark navbar-custom">
+        <div class="container">
+            <!--<a class="navbar-brand" href="#">
+                <span class="d-flex align-items-center">
+                    <img src="img/SalarFMt_4 copia.png" alt="icono" class="img-fluid" style="max-width: auto; height: 120px;"> 
+                    <img src="img/SalarFMt_7.png" alt="icono2" class="img-fluid" style="max-width: auto; height: px;"> 
+                </span> 
+            </a>-->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-                <!-- <span class="navbar-toggler-icon"></span> -->
                 <i class="fa-solid fa-bars-staggered fa-beat-fade"></i>
             </button>
-            <div class="collapse navbar-collapse d-flex justify-content-end" id="collapsibleNavbar">
+            <div class="collapse navbar-collapse justify-content-center mt-0" id="collapsibleNavbar">
                 <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Nosotros</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Programacion</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Publicidad</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contacto</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Nosotros">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Programación">Programación</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Publicidad">Publicidad</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Contacto">Contacto</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
     <!-- Navbar fin -->
-    <!-- jumbotron ini -->
-    <div class="p-5 jumbotron">
-        <h1>Escuchanos en Vivo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero dolore doloremque quo at, consequatur totam quibusdam facilis, omnis molestias vel accusamus inventore quisquam repellat magnam quas, iusto hic voluptates illo?</p>
-    </div>
-    <!-- jumbotron fin -->
+    <h1>Escúchanos en Vivo</h1>
+    <p>Las conversaciones, las canciones y los artistas que más te gustan, están en SalarFM.</p>
+    <audio src="assadasdasd" controls></audio>
+</div>
+<!-- jumbotron fin -->
     <!--Nosotros Ini-->
-    <h2>Nosotros</h2>
+    <h3 id="Nosotros">Quiénes Somos</h3>
     <div class="container-fluid">
         <div class="row">
-            <div class="nleft col-sm-6"></div>
-            <div class="nright col-sm-6">
-                <h3>Quienes Somos</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam eius voluptatum dolores nesciunt inventore omnis in recusandae itaque molestias, asperiores voluptatibus esse fuga suscipit animi excepturi aperiam doloremque ipsum dignissimos! Fuga vero atque cupiditate suscipit assumenda necessitatibus minima, natus libero. Nisi molestias esse qui quibusdam illo maxime nesciunt facere ut. Iusto dolorem eum eaque ad, aliquam eveniet qui commodi adipisci tempore nesciunt ratione, sit corrupti repellendus doloribus ipsa molestiae vero minus. Dolorum vel facilis repudiandae possimus ut voluptatum blanditiis corrupti! Modi praesentium quos at, a soluta nihil expedita incidunt laboriosam quidem est maiores odio omnis ratione debitis saepe consectetur? Unde quia perspiciatis nemo, alias itaque voluptas iusto iure iste reiciendis quis qui labore, ea minima veritatis dignissimos illo doloribus, aut ducimus quasi natus quae maiores! Facilis porro dolor aspernatur perspiciatis a omnis cum esse commodi possimus deserunt iure ad impedit accusamus veniam unde fugiat, repellendus vitae, maiores odio doloremque? Excepturi libero amet nisi voluptatibus, reiciendis illum consequatur velit, ex eaque sint unde. Autem quasi exercitationem, quaerat doloremque perspiciatis, ab unde itaque quibusdam natus deleniti sunt, consequuntur similique id perferendis magni voluptates cupiditate voluptatem. Iusto et consectetur, quos doloremque minima iure consequatur illum temporibus quasi eos repellat veritatis necessitatibus praesentium numquam molestiae maxime adipisci voluptas minus officiis cum corrupti ea impedit unde cupiditate. Nihil eum in asperiores, voluptatibus sit molestias et minima nesciunt, numquam debitis aliquam. Voluptatibus debitis quos, consequatur nihil incidunt quisquam itaque! Recusandae ut autem, cupiditate ipsam quo sapiente dolor ad illo minus a expedita? Saepe ut mollitia consequatur, rem recusandae debitis cumque perspiciatis pariatur ipsam numquam nam id, omnis sequi natus? Voluptatum vero eius voluptatem qui veritatis! Numquam ea animi, nostrum earum sunt natus eligendi cumque ullam suscipit similique, porro distinctio illo! Omnis similique, ratione expedita magnam a doloremque rerum excepturi, quidem facilis molestiae fugit ipsam libero necessitatibus!</p>
-            </div>
-        </div>
+            <p class="nosotros-p"><p class="nosotros-p">
+                SalarFM, con 30 años de historia en el corazón de Calama, es la esencia de la radio que se escucha y siente. Más allá de las ondas sonoras, somos la voz de nuestra comunidad y el latido de la cultura local.
+                <br><br>
+                Nuestro apasionado equipo de trabajo se enorgullece de ofrecer excelencia en cada transmisión. Nos esforzamos incansablemente para brindar la mejor selección musical, donde encontrarás la música perfecta para cada momento de tu día. Además, no te pierdas nuestros programas de conversación en vivo, donde exploramos temas apasionantes y conectamos con nuestra audiencia.
+                <br><br>
+                Mantenemos viva la esencia de Calama a través de la radio, y ahora, con SalarFM, puedes escucharnos desde cualquier rincón del mundo en línea, o sintonizarnos directamente desde el dial 104.1 en Calama.
+                <br><br>
+                Sintoniza SalarFM, la emisora que te invita a "escuchar y sentir" la música y la cultura local. Únete a nuestra comunidad radiofónica, donde la música cobra vida en cada nota y cada palabra.
+            </p></p>
+            <img src="img/Imagen de WhatsApp 2023-10-09 a las 12.38.07_070c293c.jpg" class="nosotros-img">
+        </div>    
     </div>
-    <!--Nosotros Ini-->
+    <!--Nosotros fin-->
     <!--Programacion Ini-->
-    <h2>Programación</h2>
+    <h3 id="Programación">Programación</h3>
     <div class="container-fluid">
         <div class="row">
             <img src="img/timetable-3219583_1280.jpg" alt="">
@@ -72,24 +80,41 @@
     </div>
     <!--Programacion fin-->
     <!--Publicidad Ini-->
-    <h2>Publicidad</h2>
+    <h1 id="Publicidad">Publicidad</h1>
     <div class="container-fluid">
         <div class="row">
             <img src="img/pexels-pixabay-210126.jpg" alt="">
         </div>
     </div>
     <!--Publicidad fin-->
-      <!--Contacto Ini-->
-      <h2>Contactanos</h2>
-      <div class="container-fluid">
-          <div class="row">
-              <img src="img/contact-us-4193523_1280.jpg" alt="">
-          </div>
-      </div>
-      <!--Contacto fin-->
-
-    <!-- BS incia -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <!-- BS fin -->
+    <!--Contacto Ini-->
+    <h1 id="Contacto">Contactanos</h1>
+    <div class="container-fluid">
+        <div class="row">
+            <p class="contacto-p"><p class="contacto-p">
+                ¡Nos encantaría saber de ti! En SalarFM, estamos siempre disponibles para conectarnos contigo y escuchar tus comentarios, sugerencias y solicitudes. Puedes contactarnos a través de nuestras redes sociales para mantenerte al tanto de últimas novedades, o simplemente enviarnos un mensaje directo por WhatsApp para una comunicación rápida y directa.
+                <br><br>
+                Redes Sociales:
+                <a href="https://www.facebook.com/profile.php?id=61550539989305&mibextid=ZbWKwL" target="_blank"><i class="fa-brands fa-facebook fa-xl"></i></a>
+                <a href="https://instagram.com/radiosalarfm?igshid=MzRlODBiNWFlZA==" target="_blank"><i class="fa-brands fa-instagram fa-xl" style="color:#ee2a7b;"></i></a>
+                <br><br>
+                LLamanos al teléfono: +56 9 94462261
+                <a href="https://walink.co/2c3cb3" target="_blank"><i class="fa-brands fa-whatsapp fa-xl" style="color: #25d366;"></i></i></a>
+                <br><br>
+                No dudes en ponerte en contacto con nosotros en cualquier momento. Tu opinión es importante y nos ayuda a seguir mejorando nuestra programación y servicios. ¡Esperamos escucharte pronto!
+            </p></p>
+            <img src="img/Contacto.png" class="contacto-img">   
+        </div>
+    </div>
+    <!--Contacto fin-->
+    <footer>
+        <p>todos los derechos reservados por copyright</p>
+        <p>el sitio fue desarrollado por ...</p>
+    </footer>
+    <a href="https://walink.co/2c3cb3" class="what" target="_blank">
+        <i class="fa-brands fa-whatsapp fa-2xl"></i>
+    </a>
 </body>
 </html>
+
+
