--- a/index.html
+++ b/index.html
@@ -13,21 +13,13 @@
     <title>SalarFM</title>
 </head>
 <body>
-<!-- jumbotron ini -->
-<div class="p-5 jumbotron jumbotron-custom">
-    <!-- Navbar Inicia -->
+<!-- Navbar Inicia -->
     <nav class="navbar navbar-expand-xl navbar-dark navbar-custom">
         <div class="container">
-            <!--<a class="navbar-brand" href="#">
-                <span class="d-flex align-items-center">
-                    <img src="img/SalarFMt_4 copia.png" alt="icono" class="img-fluid" style="max-width: auto; height: 120px;"> 
-                    <img src="img/SalarFMt_7.png" alt="icono2" class="img-fluid" style="max-width: auto; height: px;"> 
-                </span> 
-            </a>-->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <i class="fa-solid fa-bars-staggered fa-beat-fade"></i>
             </button>
-            <div class="collapse navbar-collapse justify-content-center mt-0" id="collapsibleNavbar">
+            <div class="collapse navbar-collapse justify-content-center mt-auto" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="#">Inicio</a>
@@ -35,12 +27,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#Nosotros">Nosotros</a>
                     </li>
-                    <li class="nav-item">
+                    <!--<li class="nav-item">
                         <a class="nav-link" href="#Programación">Programación</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#Publicidad">Publicidad</a>
-                    </li>
+                    </li>-->
                     <li class="nav-item">
                         <a class="nav-link" href="#Contacto">Contacto</a>
                     </li>
@@ -49,46 +41,47 @@
         </div>
     </nav>
     <!-- Navbar fin -->
-    <h1>Escúchanos en Vivo</h1>
-    <p>Las conversaciones, las canciones y los artistas que más te gustan, están en SalarFM.</p>
-    <audio src="assadasdasd" controls></audio>
-</div>
-<!-- jumbotron fin -->
-    <!--Nosotros Ini-->
-    <h3 id="Nosotros">Quiénes Somos</h3>
-    <div class="container-fluid">
-        <div class="row">
-            <p class="nosotros-p"><p class="nosotros-p">
-                SalarFM, con 30 años de historia en el corazón de Calama, es la esencia de la radio que se escucha y siente. Más allá de las ondas sonoras, somos la voz de nuestra comunidad y el latido de la cultura local.
-                <br><br>
-                Nuestro apasionado equipo de trabajo se enorgullece de ofrecer excelencia en cada transmisión. Nos esforzamos incansablemente para brindar la mejor selección musical, donde encontrarás la música perfecta para cada momento de tu día. Además, no te pierdas nuestros programas de conversación en vivo, donde exploramos temas apasionantes y conectamos con nuestra audiencia.
-                <br><br>
-                Mantenemos viva la esencia de Calama a través de la radio, y ahora, con SalarFM, puedes escucharnos desde cualquier rincón del mundo en línea, o sintonizarnos directamente desde el dial 104.1 en Calama.
-                <br><br>
-                Sintoniza SalarFM, la emisora que te invita a "escuchar y sentir" la música y la cultura local. Únete a nuestra comunidad radiofónica, donde la música cobra vida en cada nota y cada palabra.
-            </p></p>
-            <img src="img/Imagen de WhatsApp 2023-10-09 a las 12.38.07_070c293c.jpg" class="nosotros-img">
-        </div>    
+    <!-- jumbotron ini -->
+    <div class="p-5 jumbotron jumbotron-custom">
+        <h1>Escúchanos en Vivo</h1>
+        <p>Las conversaciones, las canciones y los artistas que más te gustan, están en SalarFM.</p>
+        <audio src="assadasdasd" controls></audio>
     </div>
+    <!-- jumbotron fin -->
+        <!--Nosotros Ini-->
+        <h2 id="Nosotros">Quiénes Somos</h2>
+        <div class="container-fluid">
+            <div class="row">
+                <p class="nosotros-p"><p class="nosotros-p">
+                En SalarFM, con 30 años en Calama, somos más que una radio: somos la voz de nuestra comunidad y el reflejo de la cultura local. Nuestro equipo apasionado se dedica a ofrecer transmisiones de alta calidad y una cuidada selección musical. 
+                <br><br>
+                Te invitamos a seguir nuestros programas de conversación en vivo, conectándonos 100% con la actualidad.
+                Ahora, puedes escucharnos en todo el mundo en línea o en el dial 104.1 en Calama.
+                <br><br>
+                En SalarFM, te invitamos a "escuchar y sentir" la música, la cultura y las emociones que te unen con el corazón de nuestra vibrante comunidad.
+                </p></p>
+                <img src="img/Imagen de WhatsApp 2023-10-09 a las 12.38.07_070c293c.jpg" class="nosotros-img">
+            </div>    
+        </div>
     <!--Nosotros fin-->
     <!--Programacion Ini-->
-    <h3 id="Programación">Programación</h3>
+    <!--<h2 id="Programación">Programación</h2>
     <div class="container-fluid">
         <div class="row">
             <img src="img/timetable-3219583_1280.jpg" alt="">
         </div>
-    </div>
+    </div>-->
     <!--Programacion fin-->
     <!--Publicidad Ini-->
-    <h1 id="Publicidad">Publicidad</h1>
+    <!--<h2 id="Publicidad">Publicidad</h2>
     <div class="container-fluid">
         <div class="row">
             <img src="img/pexels-pixabay-210126.jpg" alt="">
         </div>
-    </div>
+    </div>-->
     <!--Publicidad fin-->
     <!--Contacto Ini-->
-    <h1 id="Contacto">Contactanos</h1>
+    <h2 id="Contacto">Contactanos</h2>
     <div class="container-fluid">
         <div class="row">
             <p class="contacto-p"><p class="contacto-p">
@@ -108,12 +101,75 @@
     </div>
     <!--Contacto fin-->
     <footer>
-        <p>todos los derechos reservados por copyright</p>
-        <p>el sitio fue desarrollado por ...</p>
+    <section class="py-5 bg-dark">
+        <div class="container">
+        <div class="row app-footer__widgets">
+            <div class="col-12 col-md-4">
+                <section class="px-3 h-100">
+                    <h6 class="widget-title">Dirección</h6>
+                        <ul>
+                            <li>
+                                <p>Hurtado de Mendoza #2161. Calama</p>
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3687.2807906718294!2d-68.93116392293379!3d-22.456080221922274!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x96ac09c7133a68c7%3A0x616f7662cf9b7c51!2sHurtado%20de%20Mendoza%202161%2C%201390694%20Calama%2C%20Antofagasta!5e0!3m2!1ses-419!2scl!4v1698636120260!5m2!1ses-419!2scl" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            </li>
+                        </ul>
+                </section>
+            </div>
+            <hr class="w-100 my-5 d-md-none">
+            <div class="col-12 col-md-4">
+                <section class="px-3 h-100">
+                    <h6>Frecuencias</h6>
+                    <ul>
+                    <li><b>Calama</b> 104.1 FM</li>
+                    <li><b>Chuquicamata </b> 104.1 FM</li>
+                    </ul>
+                </section>
+            </div>
+            <hr class="w-100 my-5 d-md-none">
+            <div class="col-12 col-md-4">
+                <section class="px-3 h-100">
+                    <h6 class="widget-title">Contáctanos</h6>
+                        <div class="textwidget">
+                            <div role="form" class="wpcf7" id="wpcf7-f590-o1" lang="es-CL" dir="ltr">
+                            <div class="screen-reader-response">
+                                <p role="status" aria-live="polite" aria-atomic="true"></p>
+                                <ul></ul>
+                            </div>
+                        <form action="/#wpcf7-f590-o1" method="post" class="wpcf7-form init app-footer__contact-form" novalidate="novalidate" data-status="init">
+                        <div style="display: none;">
+                        <input type="hidden" name="_wpcf7" value="590">
+                        <input type="hidden" name="_wpcf7_version" value="5.3.2">
+                        <input type="hidden" name="_wpcf7_locale" value="es_CL">
+                        <input type="hidden" name="_wpcf7_unit_tag" value="wpcf7-f590-o1">
+                        <input type="hidden" name="_wpcf7_container_post" value="0">
+                        <input type="hidden" name="_wpcf7_posted_data_hash" value="">
+                        <input type="hidden" name="_wpcf7_recaptcha_response" value="03AFcWeA476CgtV7Y9riRDlADewzpBz_I5emzjmmfU1LVhfy83KBPeq2g5wKRIBE8CIfSCUHIxMqsn5t7CqLD1m8LUOhIYqBw-wrjNOXnfKUUN9LfQpxlyvFNUqXQerbdjUd5EE6qYoLhZUQIg9Bqx5BgrXkSb1kbBBHodP75VJmyXxSGJYUzwIL-tCQ2bNjmCL9Pv8ocUZXKO0IeJhr0U8klrgl_H80JD6eG8atQ4KwqeU0C8ucf--cMfy_jqA6-z2f7XaelEPKYMN2qpgdWf4Ntr0Wf73oStly29ZRBGXAuZy_vBCjo54QmMJwkNGMkRWdlnoyT9pBru0gp5Q3MGUZfTz6mwduLpbVy3nDr6cvdYWbje_HgJhlltTDfRU9jCAZXtItGnXFPq26dIzP50mqowPMWVFR2mLTCTwQXktJfaLPJahSVHK5nTKxdaM_R-G1zlFBSBGK0bg2IBws8P8yV5wh2LKNWO0-GsqBcwrktE9vJ7Xd0dN1q4aSHcPx6KBtHbNuSEqu5pdnN1c0ztlEYXHc1opGfX_eGhdRfTyqAAgJzt6J6xplg">
+                        </div>
+                        <div class="form-group">
+                            <span class="wpcf7-form-control-wrap your-name"><input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required form-control" aria-required="true" aria-invalid="false" placeholder="Ingresa tu nombre"></span>
+                        </div>
+                        <div class="form-group">
+                            <span class="wpcf7-form-control-wrap your-email"><input type="email" name="your-email" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email form-control" aria-required="true" aria-invalid="false" placeholder="Ingresa tu correo"></span>
+                        </div>
+                        <div class="form-group">
+                            <span class="wpcf7-form-control-wrap your-message"><textarea name="your-message" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea wpcf7-validates-as-required form-control" aria-required="true" aria-invalid="false" placeholder="¿Cuál es tu mensaje?"></textarea></span>
+                        </div>
+                        <p><input type="submit" value="Enviar" class="wpcf7-form-control wpcf7-submit btn btn-secondary btn-block btn-sm"><span class="ajax-loader"></span></p>
+                        <div class="wpcf7-response-output" aria-hidden="true"></div></form></div>
+                        </div>
+                </section>
+                </div>
+            </div>
+        </div>
+    </section>
     </footer>
+
     <a href="https://walink.co/2c3cb3" class="what" target="_blank">
         <i class="fa-brands fa-whatsapp fa-2xl"></i>
     </a>
+    <!-- BS Inicia -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <!-- BS fin -->
 </body>
 </html>
 
