--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                 <p role="status" aria-live="polite" aria-atomic="true"></p>
                                 <ul></ul>
                             </div>
-                        <form action="/#wpcf7-f590-o1" method="post" class="wpcf7-form init app-footer__contact-form" novalidate="novalidate" data-status="init">
+                        <form action="/#wpcf7-f590-o1x" method="post" class="wpcf7-form init app-footer__contact-form" novalidate="novalidate" data-status="init">
                         <div style="display: none;">
                         <input type="hidden" name="_wpcf7" value="590">
                         <input type="hidden" name="_wpcf7_version" value="5.3.2">
