se agregan emisoras

--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
                     <h6>Frecuencias</h6>
                     <ul>
                     <li><b>Calama</b> 104.1 FM</li>
-                    <li><b>Chuquicamata </b> 104.1 FM</li>
+                    <li><b>Chuquicamata</b> 104.1 FM</li>
+                    <li><b>San Pedro de Atacama</b> 104.1 FM</li>
+                    <li><b>María Elena</b> 104.1 FM</li>
                     </ul>
                 </section>
             </div>
